--- a/public/index.html
+++ b/public/index.html
@@ -10,4 +10,4 @@
     <p>この下にReactが表示される</p>
     <div id="root"></div>
     <script src="bundle.js"></script>
-</html></script>
+</html></script><script type="text/javascript" src="bundle.js"></script>
