--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Build by webpack 4</title>
   </head>
   <body>
-    <p>この下にReactが表示される</p>
+    <p>これはHTMLで書かれている。この下にReactが表示される</p>
     <div id="root"></div>
-    <script src="bundle.js"></script>
-</html></script><script type="text/javascript" src="bundle.js"></script>
+  </body>
+</html>
